Resolves: tdf#147802 don't create a header/footer control for every page

just create a cheaper SwHeaderFooterDashedLine and only create the
"expensive" control on-demand if it becomes visible on-screen and
destroy it immediately if it goes off-screen.

Change-Id: Id876145130d394f55f54790d5e8399dca4f8c03e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142748
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>